# meta-ads-manager

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  COPYRIGHT.txt  LICENSE.md  PRESENTATION.md  README.md  pyproject.toml  test_all_tools.py
meta_ads_mcp/: __init__.py  __main__.py  auth.py  client.py  server.py
meta_ads_mcp/models/: __init__.py  common.py
meta_ads_mcp/tools/: __init__.py  _helpers.py  account.py  ad_sets.py  ads.py  analytics.py  audiences.py  campaigns.py  creatives.py  oauth.py
meta_ads_mcp/utils/: __init__.py  errors.py  formatting.py  pagination.py  rate_limiter.py  safety.py
tests/: conftest.py  test_auth.py  test_client.py  test_utils.py
