[project]
name = "meta-ads-manager"
version = "1.0.0"
description = "MCP Server for Meta/Facebook Ads API — manage campaigns, analytics, audiences, and creatives from Claude"
requires-python = ">=3.12"
license = "LicenseRef-Proprietary"
authors = [
    { name = "Matteo Milone" },
]
keywords = ["mcp", "meta", "facebook", "ads", "claude", "model-context-protocol", "advertising"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python :: 3",
    "License :: Other/Proprietary License",
    "Topic :: Software Development :: Libraries",
]
readme = "README.md"
dependencies = [
    "fastmcp>=3.0.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
meta-ads-manager = "meta_ads_mcp.server:main"

[project.urls]
Homepage = "https://github.com/matteomilonekr/meta-ads-manager"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.0.0",
    "respx>=0.22.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["meta_ads_mcp"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
